# fyba

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  Translation_status.txt  catalog-info.yaml  configure  configure.ac  fyba.pc.in
.github/: CODEOWNERS
.security/: description.yaml
.sikkerhet/: beskrivelse.yaml
FYBA/: FYBA.cpp  FYBA_DLL.cpp  FYHO.cpp  FYLB.cpp  FYLE.cpp  FYLI.cpp  FYLO.cpp  FYLR.cpp  FYLS.cpp  FYLU.cpp  Fyba_Callback.cpp  Fyba_melding.cpp  Fyba_melding_dll.cpp.bak  fyba_strings.h  fyln.cpp  stdafx.cpp  stdafx.h
GM/: stdafx.cpp
Lib/: FYBA.lib  GM.lib  UT.lib
UT/: ANFORSEL.cpp  CREDIR.cpp  DELDIR.cpp  DELFILE.cpp  DISKINFO.cpp  FILNACMP.cpp  FULLPATH.cpp  INQTID.cpp  MAKEPATH.cpp  SETSIZE.cpp  StrtPros.cpp  UT1.cpp  make.sh
doc/: CMakeLists.txt  Makefile.am
doc/.svn/: all-wcprops  entries
doc/en_EN/: fyba.html  fyba1.html  fyba2.html
doc/en_EN/.svn/: all-wcprops  entries
doc/no_NB/: fyba1.html  fyba2.html
doc/no_NB/.svn/: all-wcprops  entries
doc/no_NB/.svn/text-base/: fyba1.html.svn-base
include/: fygm.h  fyut.h
releases/linux/i386/: libfyba-20111110-i386.tar.bz2
releases/linux/x64/: libfyba-20111110-x64.tar.bz2
src/FYBA/: CMakeLists.txt  FYBA.cpp  FYBA.sln  FYBA.vcxproj  FYBA_DLL.cpp  FYHO.cpp  FYLB.cpp  FYLD.cpp  FYLE.cpp  FYLH.cpp  FYLI.cpp  FYLO.cpp  FYLP.cpp  FYLR.cpp  FYLS.cpp  FYLU.cpp  FYLX.cpp  FYTA.cpp  Fyba_Callback.cpp  Fyba_melding.cpp  Fyba_melding_dll.cpp  Fyba_melding_dll.cpp.bak  Makefile.am  fyba.h  fyba_strings.h  fybax.h  fyln.cpp  make.sh  stdafx.cpp  stdafx.h
src/GM/: CMakeLists.txt  GM.cpp  GM.sln  GM.vcxproj  Makefile.am  fygm.h  make.sh  stdafx.h
src/UT/: ANFORSEL.cpp  CMakeLists.txt  CREDIR.cpp  CopyFile.cpp  DELDIR.cpp  DELFILE.cpp  DISKINFO.cpp  FILNACMP.cpp  FULLPATH.cpp  INQSIZE.cpp  INQTID.cpp  MAKEPATH.cpp  Makefile.am  SETSIZE.cpp  SPLITPTH.cpp  StrtPros.cpp  UT.sln  UT.vcxproj  UT1.cpp  UT2.cpp  UT3.cpp  UT4.cpp  fyut.h  make.sh  stdafx.cpp  stdafx.h
