AM_CPPFLAGS = --pedantic -Wno-long-long -Wall -O2 -D_FILE_OFFSET_BITS=64 -DUNIX -DLINUX -fPIC -Wno-write-strings
ACLOCAL_AMFLAGS = -I m5

lib_LTLIBRARIES = libfyut.la
libfyut_la_SOURCES = ANFORSEL.cpp  DELDIR.cpp    FILNACMP.cpp  INQTID.cpp    UT1.cpp  UT4.cpp CopyFile.cpp  DELFILE.cpp  MAKEPATH.cpp  stdafx.cpp    UT2.cpp CREDIR.cpp    DISKINFO.cpp  INQSIZE.cpp   SETSIZE.cpp   StrtPros.cpp  UT3.cpp fyut.h  stdafx.h
libfyut_la_LDFLAGS = -version-info 0:0:0

library_includedir=$(includedir)/fyba
library_include_HEADERS = fyut.h     


